Subo mis cambios desde carpeta limpia

--- a/tpi-render/frontTPI/html/login.html
+++ b/tpi-render/frontTPI/html/login.html
@@ -21,7 +21,7 @@
     </nav>
     <div class="auth-buttons">
       <button class="login-btn">Iniciar Sesión</button>
-      <button class="register-btn">Registrarse</button>
+      <button class="register-btn" onclick="window.location.href='/tpi-render/frontTPI/html/registro.html'">Registrarse</button>
     </div>
   </header>
 
