--- a/tpi-render/frontTPI/html/misreservas.html
+++ b/tpi-render/frontTPI/html/misreservas.html
@@ -1,36 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vehículos Disponibles</title>
-    <link rel="stylesheet" href="/tpi-render/frontTPI/css/style.css" />
-    <link rel="stylesheet" href="/tpi-render/frontTPI/css/cssReserva.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mis Reservas</title>
+  <link rel="stylesheet" href="/tpi-render/frontTPI/css/cssReserva.css" />
 </head>
-
 <body>
-    <header class="navbar">
-        <div class="logo">
-            <img src="https://cdn-icons-png.flaticon.com/512/743/743007.png" alt="logo" />
-            <span>RentCar</span>
-        </div>
-        <nav>
-            <a href="/tpi-render/frontTPI/html/index.html">Inicio</a>
-            <a href="/tpi-render/frontTPI/html/vehiculos.html">Vehículos</a>
-            <a href="/tpi-render/frontTPI/html/reservas.html">Mis Reservas</a>
-        </nav>
-        <div class="auth-buttons">
-            <a href="/tpi-render/frontTPI/html/login.html"><button class="login-btn">Iniciar Sesión</button></a>
-            <a href="/tpi-render/frontTPI/html/registro.html"> <button class="register-btn">Registrarse</button></a>
-    </header>
+  <header class="navbar">
+    <div class="logo">
+      <img src="https://cdn-icons-png.flaticon.com/512/743/743007.png" alt="logo" />
+      <span>RentCar</span>
+    </div>
+    <nav>
+      <a href="/tpi-render/frontTPI/html/index.html">Inicio</a>
+      <a href="/tpi-render/frontTPI/html/vehiculos.html">Vehículos</a>
+      <a href="/tpi-render/frontTPI/html/reservas.html">Mis Reservas</a>
+    </nav>
+  </header>
 
-    <main class="vehiculos-container">
-        <h2>MIS RESERVAS</h2>
-        <div id="reservas-container" class="reservas-grid"></div>
+  <main class="vehiculos-container">
+    <h2>MIS RESERVAS</h2>
+    <div id="reservas-container" class="reservas-grid"></div>
+  </main>
 
-    </main>
-    <script src="/tpi-render/frontTPI/html/misreservas.js"></script>
+  <script src="/tpi-render/frontTPI/html/misReserva.js"></script>
 </body>
-
 </html>
